[package]
name = "jolt"
version = "1.3.0"
edition = "2024"
description = "Program STM32L0 microcontrollers over the UART bootloader"
license = "MIT"
repository = "https://github.com/hardwario/jolt"

[dependencies]
serialport = "4.9.0"
thiserror = "2.0.18"

# CLI-only dependencies: the reusable library (src/lib.rs and its modules) uses
# none of these — the flash/erase engine is UI-free and returns typed errors.
# They are optional so a library consumer (e.g. tower-cli) doesn't pull clap,
# anyhow, or indicatif. The `cli` feature (default) turns them on and builds the
# `jolt` binary.
anyhow = { version = "1.0.102", optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
indicatif = { version = "0.18.4", optional = true }

[features]
default = ["cli"]
# Build the `jolt` binary and its terminal UI (progress bars). Library-only
# consumers can depend on jolt with `default-features = false`.
cli = ["dep:anyhow", "dep:clap", "dep:indicatif"]

[[bin]]
name = "jolt"
path = "src/main.rs"
required-features = ["cli"]
